Revert "resolve #7708 Editor border clipped on surface in some themes (plain etc)"
This reverts commit 27b8f5ad542a1ac461c692bebb6fea8e32ac68e3.

--- a/packages/survey-creator-core/src/components/question.scss
+++ b/packages/survey-creator-core/src/components/question.scss
@@ -1026,8 +1026,6 @@ svc-question,
     margin-right: var(--sjs2-spacing-negative-x500, -40px);
     padding-left: var(--sjs2-spacing-x500, 40px);
     padding-right: var(--sjs2-spacing-x500, 40px);
-    padding-block: var(--sjs2-spacing-x050);
-    margin-block: var(--sjs2-spacing-negative-x050);
     overflow-x: auto;
   }
 
